add inline hover style.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 
 <head>
     <title>Gomel glass</title>
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
     <div class="wrapper">
-
+        Hello world!
     </div>
+    <div class="wrapper">
+        Hello world!
+    </div>
+    <a class="inline" href="#">Inline element</a>
+    <a class="inline" href="#">Inline element</a>
+    <a class="inline" href="#">Inline element</a>
 </body>
 
 </html>
